manifests/jenkins/agent-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: agent-pod
  namespace: stage
spec:
  containers:
#    - name: maven-jdk-11
#      image: maven:3.9.9-eclipse-temurin-11
#      command: ["sleep"]
#      args: ["infinity"]
#    - name: docker
#      image: docker:24-dind
#      securityContext:
#        privileged: true
#      env:
#        - name: DOCKER_TLS_CERTDIR
#          value: ""
#      ports:
#        - containerPort: 2375
#      command: ["dockerd-entrypoint.sh"]
#      args: ["--host=tcp://0.0.0.0:2375","--host=unix:///var/run/docker.sock"]
#    - name: maven-jdk-21
#      image: maven:3.9.9-eclipse-temurin-21
#      command: ["sleep"]
#      args: ["infinity"]
#    - name: trivy
#      image: aquasec/trivy:0.69.3
#      env:
#        - name: DOCKER_HOST
#          value: tcp://localhost:2375
#      command: ["sleep"]
#      args: ["infinity"]
    - name: kubectl
      image: alpine/kubectl:1.36.0
      command: ["cat"]
      tty: true
